--- a/api-rest-nodejs/package.json
+++ b/api-rest-nodejs/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
-    "start": "nodemon app.js"
+    "build": "",
+    "dev": "nodemon.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
