--- a/api-rest-nodejs/package.json
+++ b/api-rest-nodejs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
